; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.1.5/src/extr_lua.c_report.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.1.5/src/extr_lua.c_report.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"(error object is not a string)\00", align 1
@progname = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @report to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @report(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %24

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @lua_isnil(i32* %9, i32 -1)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %24, label %12

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = call i8* @lua_tostring(i32* %13, i32 -1)
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  br label %18

18:                                               ; preds = %17, %12
  %19 = load i32, i32* @progname, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @l_message(i32 %19, i8* %20)
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @lua_pop(i32* %22, i32 1)
  br label %24

24:                                               ; preds = %18, %8, %2
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @lua_isnil(i32*, i32) #1

declare dso_local i8* @lua_tostring(i32*, i32) #1

declare dso_local i32 @l_message(i32, i8*) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
